@@ -6,6 +6,7 @@ released as part of the Neo4j-Driver distribution
 0.21 / development
 
  - Add experimental support for HTTP responses in Jolt format.
+ - Add experimental http_reason() and result_handlers() methods.
 
 0.20 / 2021-01-10
 
